Fix another popup overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -740,8 +740,6 @@ bottom: 0;
 
 #contact {
 	width: 0;
-	height: 100%;
-	top: 0;
 	left: 0;
 	-webkit-transition: width .4s ease-in-out;
 	-o-transition: width .4s ease-in-out;
@@ -751,12 +749,11 @@ bottom: 0;
 	width: 100%;
 }
 #contact .popup_inner {
-	height: 100%;
+	height: max-content;
 }
 .product-card {
 	width: 100%;
 	height: 0;
-	top: 0;
 	left: 0;
 	-webkit-transition: height .4s ease-in-out;
 	-o-transition: height .4s ease-in-out;
@@ -911,8 +908,6 @@ bottom: 0;
 }
 #basket {
 	width: 0;
-	height: 100%;
-	top: 0;
 	right: 0;
 	display: -webkit-box;
 	display: -ms-flexbox;
